# phs2dd

./: README.md  param_test.json  phs2dd.py  phs2dd_workflow.wdl  pyproject.toml  requirement.txt
src/: phs2dd.py
src/phs2dd/: core.py  phs2dd.py
src/phs2dd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
